--- a/po/de.po
+++ b/po/de.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-23 09:41+0200\n"
+"POT-Creation-Date: 2018-10-29 14:27+0100\n"
 "PO-Revision-Date: 2018-10-23 15:07+0000\n"
 "Last-Translator: Sarah Kriesch <ada.lovelace@gmx.de>\n"
-"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>"
-"\n"
+"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -262,21 +261,15 @@ msgstr "B"
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, seitdem es das jetzt laufende "
-"System ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, seitdem es das jetzt laufende System ist."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, seitdem es der jetzt gemountete "
-"Schnappschuss ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, seitdem es der jetzt gemountete Schnappschuss ist."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, seitdem es der nächste zu "
-"mountende Schnappschuss ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, seitdem es der nächste zu mountende Schnappschuss ist."
 
 msgid "Cleanup"
 msgstr "Bereinigen"
@@ -446,6 +439,10 @@ msgstr "Fehler (%s)."
 msgid "File '%s' not found."
 msgstr "Datei '%s' wurde nicht gefunden."
 
+#, fuzzy, c-format
+msgid "Free space error (%s)."
+msgstr "E/A-Fehler (%s)."
+
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr "GiB"
@@ -554,10 +551,6 @@ msgstr "Vorher-Datum"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Quota-Fehler (%s)."
-
-#, c-format
-msgid "Quota failure (%s)."
-msgstr "Quota-Störung (%s)."
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Weitere Anweisungen finden Sie im \"man snapper\"."
@@ -674,6 +667,9 @@ msgstr "Root-Argument kann nur zusammen mit \"no-dbus\" verwendet werden."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "Aufruf: snapper [--Globale-Optionen] <Befehl> [--Befehlsoptionen] [Befehlsargumente]"
+
+#~ msgid "Quota failure (%s)."
+#~ msgstr "Quota-Störung (%s)."
 
 #~ msgid "Running in non UTF-8 locale. Setup is unsupported."
 #~ msgstr "Läuft in einer nicht-UTF-8-Locale. Setup wird nicht unterstützt."
