--- a/po/ka.po
+++ b/po/ka.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-23 09:41+0200\n"
+"POT-Creation-Date: 2018-10-29 14:27+0100\n"
 "PO-Revision-Date: 2005-05-18 10:33+0200\n"
 "Last-Translator: Aiet Kolkhi <aiet@qartuli.net>\n"
 "Language-Team: Georgian <i18n@suse.de>\n"
@@ -436,6 +436,11 @@ msgstr ""
 msgid "File '%s' not found."
 msgstr ""
 
+# error box title
+#, fuzzy, c-format
+msgid "Free space error (%s)."
+msgstr "I/O შეცდომა"
+
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
@@ -548,10 +553,6 @@ msgstr ""
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "I/O შეცდომა"
-
-#, c-format
-msgid "Quota failure (%s)."
-msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr ""
