--- a/po/ca.po
+++ b/po/ca.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-23 09:41+0200\n"
+"POT-Creation-Date: 2018-10-29 14:27+0100\n"
 "PO-Revision-Date: 2018-10-23 13:24+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan "
-"<https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -258,20 +257,15 @@ msgstr "B"
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"No es pot suprimir la instantània %d, ja que correspon al sistema actual."
+msgstr "No es pot suprimir la instantània %d, ja que correspon al sistema actual."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"No es pot suprimir la instantània %d, ja que correspon a la instantània "
-"muntada actualment."
+msgstr "No es pot suprimir la instantània %d, ja que correspon a la instantània muntada actualment."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"No es pot suprimir la instantània %d, ja que és la propera instantània per "
-"muntar."
+msgstr "No es pot suprimir la instantània %d, ja que és la propera instantània per muntar."
 
 msgid "Cleanup"
 msgstr "Neteja"
@@ -441,6 +435,10 @@ msgstr "Error (%s)."
 msgid "File '%s' not found."
 msgstr "No s'ha trobat el fitxer \"%s\"."
 
+#, fuzzy, c-format
+msgid "Free space error (%s)."
+msgstr "Error d'IO (%s)."
+
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr "GiB"
@@ -550,10 +548,6 @@ msgstr "Data Pre"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Error de quota (%s)."
-
-#, c-format
-msgid "Quota failure (%s)."
-msgstr "Fallada de quota (%s)."
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Vegeu \"man snapper\" per a més informació."
@@ -670,6 +664,9 @@ msgstr "l'argument root només es pot usar conjuntament amb no-dbus."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "ús: snapper [--global-options] <command> [--command-options] [command-arguments]"
+
+#~ msgid "Quota failure (%s)."
+#~ msgstr "Fallada de quota (%s)."
 
 #~ msgid "Running in non UTF-8 locale. Setup is unsupported."
 #~ msgstr "Funcionant amb una llengua no UTF-8. No s'admet la configuració."
