--- a/po/fr.po
+++ b/po/fr.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-23 09:41+0200\n"
+"POT-Creation-Date: 2018-10-29 14:27+0100\n"
 "PO-Revision-Date: 2018-10-23 20:02+0000\n"
 "Last-Translator: Antoine Belvire <antoine.belvire@opensuse.org>\n"
-"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>"
-"\n"
+"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -271,20 +270,15 @@ msgstr "o"
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Impossible de supprimer l'instantané %d puisqu'il s'agit du système actuel."
+msgstr "Impossible de supprimer l'instantané %d puisqu'il s'agit du système actuel."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Impossible de supprimer l'instantané %d puisqu'il s'agit de l'instantané "
-"actuellement monté."
+msgstr "Impossible de supprimer l'instantané %d puisqu'il s'agit de l'instantané actuellement monté."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Impossible de supprimer l'instantané %d puisqu'il s'agit du prochain "
-"instantané à monter."
+msgstr "Impossible de supprimer l'instantané %d puisqu'il s'agit du prochain instantané à monter."
 
 msgid "Cleanup"
 msgstr "Nettoyer"
@@ -468,6 +462,10 @@ msgstr "Échec (%s)."
 msgid "File '%s' not found."
 msgstr "Fichier '%s' introuvable."
 
+#, fuzzy, c-format
+msgid "Free space error (%s)."
+msgstr "Erreur E/S (%s)."
+
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr "Gio"
@@ -578,11 +576,6 @@ msgstr "Date pre"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Erreur de quota (%s)."
-
-# SLE12
-#, c-format
-msgid "Quota failure (%s)."
-msgstr "Échec du quota (%s)."
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Pour plus d'instructions, consultez 'man snapper'."
@@ -707,6 +700,10 @@ msgstr "L'argument root peut uniquement être utilisé en association avec no-db
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "Utilisation : snapper [--options-globales] <commande> [--options-de-commande] [arguments-de-commande]"
+
+# SLE12
+#~ msgid "Quota failure (%s)."
+#~ msgstr "Échec du quota (%s)."
 
 #~ msgid "Running in non UTF-8 locale. Setup is unsupported."
 #~ msgstr "Exécution selon des paramètres régionaux différents de UTF-8. Cette configuration n'est pas prise en charge."
