--- a/po/gl.po
+++ b/po/gl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-23 09:41+0200\n"
+"POT-Creation-Date: 2018-10-29 14:27+0100\n"
 "PO-Revision-Date: 2018-06-01 11:02+0000\n"
 "Last-Translator: Jiri Machalek <jiri.machalek@tieto.com>\n"
 "Language-Team: Galician <https://l10n.opensuse.org/projects/snapper/master/gl/>\n"
@@ -458,6 +458,10 @@ msgstr ""
 msgid "File '%s' not found."
 msgstr "Non se atopou '%s'."
 
+#, fuzzy, c-format
+msgid "Free space error (%s)."
+msgstr "Erro de E/S"
+
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
@@ -570,10 +574,6 @@ msgstr ""
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Erro de E/S"
-
-#, c-format
-msgid "Quota failure (%s)."
-msgstr ""
 
 #, fuzzy
 msgid "See 'man snapper' for further instructions."
