--- a/po/hr.po
+++ b/po/hr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-23 09:41+0200\n"
+"POT-Creation-Date: 2018-10-29 14:27+0100\n"
 "PO-Revision-Date: 2011-04-16 18:13+0200\n"
 "Last-Translator: Krešimir Jozić <kjozic@gmail.com>\n"
 "Language-Team: Croatian <kde-i18n-doc@kde.org>\n"
@@ -466,6 +466,10 @@ msgstr ""
 msgid "File '%s' not found."
 msgstr "'%s' nije pronađeno."
 
+#, fuzzy, c-format
+msgid "Free space error (%s)."
+msgstr "Ulazno/izlazna pogreška"
+
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
@@ -582,10 +586,6 @@ msgstr ""
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Ulazno/izlazna pogreška"
-
-#, c-format
-msgid "Quota failure (%s)."
-msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr ""
