--- a/po/pl.po
+++ b/po/pl.po
@@ -9,17 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-23 09:41+0200\n"
+"POT-Creation-Date: 2018-10-29 14:27+0100\n"
 "PO-Revision-Date: 2018-10-23 20:05+0000\n"
 "Last-Translator: Damian Zaręba <damianzrb@gmail.com>\n"
-"Language-Team: Polish <https://l10n.opensuse.org/projects/snapper/master/pl/>"
-"\n"
+"Language-Team: Polish <https://l10n.opensuse.org/projects/snapper/master/pl/>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 2.18\n"
 
 msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
@@ -449,6 +447,10 @@ msgstr "Niepowodzenie (%s)."
 msgid "File '%s' not found."
 msgstr "Nie znaleziono pliku '%s'."
 
+#, fuzzy, c-format
+msgid "Free space error (%s)."
+msgstr "Błąd we-wy (%s)."
+
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
@@ -557,10 +559,6 @@ msgstr "Przed datą"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Błąd przydziału (%s)."
-
-#, c-format
-msgid "Quota failure (%s)."
-msgstr "Niepowodzenie przydziału (%s)."
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Dodatkowe instrukcje można uzyskać, wydając polecenie \"man snapper\"."
@@ -677,6 +675,9 @@ msgstr "argumentu root można użyć tylko razem z parametrem no-dbus."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "Użycie: snapper [--opcje-globalne] <polecenia> [--opcje-poleceń] [argumenty-polecenia]"
+
+#~ msgid "Quota failure (%s)."
+#~ msgstr "Niepowodzenie przydziału (%s)."
 
 #~ msgid "Running in non UTF-8 locale. Setup is unsupported."
 #~ msgstr "W systemie są uruchomione ustawienia regionalne inne niż UTF-8. Instalacja jest nieobsługiwana."
