--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-23 09:41+0200\n"
+"POT-Creation-Date: 2018-10-29 14:27+0100\n"
 "PO-Revision-Date: 2011-11-23 07:21+0200\n"
 "Last-Translator: Halil <halilpk@gmail.com>\n"
 "Language-Team: turkish <i18n@suse.de>\n"
@@ -471,6 +471,11 @@ msgstr ""
 msgid "File '%s' not found."
 msgstr "'%s' dosyası bulunamadı."
 
+# include/ui/common_messages.ycp:95
+#, fuzzy, c-format
+msgid "Free space error (%s)."
+msgstr "Giriş/Çıkış hatası"
+
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
 msgstr ""
@@ -588,10 +593,6 @@ msgstr "Düzenlenme Tarihi"
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Giriş/Çıkış hatası"
-
-#, c-format
-msgid "Quota failure (%s)."
-msgstr ""
 
 #, fuzzy
 msgid "See 'man snapper' for further instructions."
