--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.8.2) stable; urgency=low
+
+  * Updated to version 0.8.2
+
+ -- Arvin Schnell <aschnell@suse.com>  Tue, 22 Jan 2019 11:07:18 +0100
+
 snapper (0.8.1) stable; urgency=low
 
   * Updated to version 0.8.1
