--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.8.3) stable; urgency=low
+
+  * Updated to version 0.8.3
+
+ -- Arvin Schnell <aschnell@suse.com>  Tue, 23 Mar 2019 12:17:22 +0100
+
 snapper (0.8.2) stable; urgency=low
 
   * Updated to version 0.8.2
