--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.8.4) stable; urgency=low
+
+  * Updated to version 0.8.4
+
+ -- Arvin Schnell <aschnell@suse.com>  Tue, 15 Oct 2019 11:11:12 +0100
+
 snapper (0.8.3) stable; urgency=low
 
   * Updated to version 0.8.3
