--- a/po/de.po
+++ b/po/de.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-29 14:27+0100\n"
+"POT-Creation-Date: 2019-10-15 11:05+0200\n"
 "PO-Revision-Date: 2019-04-04 18:42+0000\n"
 "Last-Translator: Sarah Kriesch <ada.lovelace@gmx.de>\n"
-"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>"
-"\n"
+"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -46,9 +45,10 @@ msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr "\t--disable-used-space\t\tBenutzten Platz nicht anzeigen."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
+msgstr "\t--extensions, -x <Optionen>\tExtra Optionen, die an den diff-Befehl übergeben wurden."
+
+msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr ""
-"\t--extensions, -x <Optionen>\tExtra Optionen, die an den diff-Befehl "
-"übergeben wurden."
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
 msgstr "\t--fstype, -f <fstype>\t\tDateisystem-Typ manuell setzen."
@@ -79,6 +79,12 @@ msgstr "\t--print-number, -p\t\tNummer des zweiten erstellten Schnappschusses au
 
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
 msgstr "\t--quiet, -q\t\t\tNormale Ausgabe unterdrücken."
+
+msgid "\t--read-only\t\t\tCreate read-only snapshot."
+msgstr ""
+
+msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr ""
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <Pfad>\t\tAm Ziel-Root arbeiten (funktioniert nur ohne DBus)."
@@ -264,21 +270,15 @@ msgstr "B"
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, seitdem es das derzeit laufende "
-"System ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, seitdem es das derzeit laufende System ist."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, seitdem es der derzeit "
-"gemountete Schnappschuss ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, seitdem es der derzeit gemountete Schnappschuss ist."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, seitdem es der nächste zu "
-"mountende Schnappschuss ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, seitdem es der nächste zu mountende Schnappschuss ist."
 
 msgid "Cleanup"
 msgstr "Bereinigen"
@@ -386,8 +386,7 @@ msgid "Creating read-only snapshot of default subvolume."
 msgstr "Nur-Lesen-Schnappschuss des Standard-Subvolumes erstellen."
 
 msgid "Creating read-write snapshot of current subvolume."
-msgstr ""
-"Lesen-Schreiben-Schnappschuss des derzeit laufenden Subvolumes erstellen."
+msgstr "Lesen-Schreiben-Schnappschuss des derzeit laufenden Subvolumes erstellen."
 
 #, c-format
 msgid "Creating read-write snapshot of snapshot %d."
@@ -541,6 +540,12 @@ msgstr "Keine Berechtigungen."
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "Öffnen der Datei '%s' nicht möglich."
+
+msgid "Option --from only supported for snapshots of type single."
+msgstr ""
+
+msgid "Option --read-write only supported for snapshots of type single."
+msgstr ""
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
