--- a/po/es.po
+++ b/po/es.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-29 14:27+0100\n"
+"POT-Creation-Date: 2019-10-15 11:05+0200\n"
 "PO-Revision-Date: 2019-03-01 20:28+0000\n"
 "Last-Translator: jcsl <trcs@gmx.com>\n"
-"Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/"
-">\n"
+"Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,8 +25,7 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algoritmo>\tAlgoritmo de limpieza para las instantáneas."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-"\t--command <command>\t\tEjecuta el comando y crea instantáneas pre y post."
+msgstr "\t--command <command>\t\tEjecuta el comando y crea instantáneas pre y post."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr "\t--config, -c <name>\t\tEstablecer el nombre a usar por la configuración."
@@ -47,6 +45,9 @@ msgstr "\t--disable-used-space\t\tDeshabilita el espacio usado que se muestra."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <opciones>\tOpciones adicionales que se pasan al comando diff."
+
+msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+msgstr ""
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
 msgstr "\t--fstype, -f <fstype>\t\tConfigurar manualmente el sistema de ficheros."
@@ -79,6 +80,12 @@ msgstr "\t--print-number, -p\t\tNúmero de impresión de la segunda instantánea
 
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
 msgstr "\t--quiet, -q\t\t\tEliminar la salida normal."
+
+msgid "\t--read-only\t\t\tCreate read-only snapshot."
+msgstr ""
+
+msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr ""
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <vía>\t\tFunciona en la raíz del destino (solo funciona sin DBus)."
@@ -274,15 +281,11 @@ msgstr "No se puede borrar la imagen %d porque es el sistema actual."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"No se puede borrar la imagen %d porque es la imagen montada en estos "
-"momentos."
+msgstr "No se puede borrar la imagen %d porque es la imagen montada en estos momentos."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"No se puede borrar la imagen %d porque es la siguiente imagen que se va a "
-"montar."
+msgstr "No se puede borrar la imagen %d porque es la siguiente imagen que se va a montar."
 
 msgid "Cleanup"
 msgstr "Limpieza"
@@ -526,9 +529,7 @@ msgid "Listing configs failed (%s)."
 msgstr "Falló el listado de configuraciones (%s)."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
-msgstr ""
-"Puede que haya olvidado indica el delimitador '..' entre los números de las "
-"instantáneas."
+msgstr "Puede que haya olvidado indica el delimitador '..' entre los números de las instantáneas."
 
 #. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
 msgid "MiB"
@@ -560,6 +561,12 @@ msgstr "Sin permisos."
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "Falló la apertura del archivo '%s'."
+
+msgid "Option --from only supported for snapshots of type single."
+msgstr ""
+
+msgid "Option --read-write only supported for snapshots of type single."
+msgstr ""
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
@@ -704,9 +711,7 @@ msgid "root argument can be used only together with no-dbus."
 msgstr "El argumento root solo se puede usar junto con no-dbus."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"uso: snapper [--global-options] <comando> [--command-options] [argumentos-"
-"comando]"
+msgstr "uso: snapper [--global-options] <comando> [--command-options] [argumentos-comando]"
 
 # SLE12
 #~ msgid "Quota failure (%s)."
