--- a/po/fi.po
+++ b/po/fi.po
@@ -5,11 +5,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-29 14:27+0100\n"
+"POT-Creation-Date: 2019-10-15 11:05+0200\n"
 "PO-Revision-Date: 2019-10-03 23:52+0000\n"
 "Last-Translator: Kimmo Kujansuu <mrkujansuu@gmail.com>\n"
-"Language-Team: Finnish <https://l10n.opensuse.org/projects/snapper/master/fi/"
-">\n"
+"Language-Team: Finnish <https://l10n.opensuse.org/projects/snapper/master/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,9 +17,7 @@ msgstr ""
 "X-Generator: Weblate 3.6.1\n"
 
 msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-msgstr ""
-"\t--all-configs, -a\t\tLuettele tilannekuvia kaikista käytettävissä olevista "
-"kokoonpanoista."
+msgstr "\t--all-configs, -a\t\tLuettele tilannekuvia kaikista käytettävissä olevista kokoonpanoista."
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr "\t--cleanup-algorithm, -c <algo>\tTilannevedoksen puhdistusalgoritmi."
@@ -29,9 +26,7 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tTilannevedoksen puhdistusalgoritmi."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-"\t--command <komento>\t\tSuorita komento ja luo ennen- ja jälkeen-"
-"tilannevedokset."
+msgstr "\t--command <komento>\t\tSuorita komento ja luo ennen- ja jälkeen-tilannevedokset."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr "\t--config, -c <nimi>\t\tAseta käytettävän määrityksen nimi."
@@ -50,6 +45,9 @@ msgstr "\t--disable-used-space\t\tÄlä näytä tilankäyttöä."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <valinnat>\tdiff-komennolle välitettävät lisävalinnat."
+
+msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+msgstr ""
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
 msgstr "\t--fstype, -f <tiedostojärjestelmä>\t\tAseta tiedostojärjestelmä käsin."
@@ -80,6 +78,12 @@ msgstr "\t--print-number, -p\t\tTulosta luodun tilannevedoksen numero."
 
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
 msgstr "\t--quiet, -q\t\t\tJätä pois tavallinen tuloste."
+
+msgid "\t--read-only\t\t\tCreate read-only snapshot."
+msgstr ""
+
+msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr ""
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <sijainti>\t\tToimi asetetussa juuressa (toimii vain ilman DBusia)."
@@ -266,20 +270,15 @@ msgstr "B"
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Tilannevedosta %d ei voi poistaa, koska se tarkoittaa nykyistä järjestelmää."
+msgstr "Tilannevedosta %d ei voi poistaa, koska se tarkoittaa nykyistä järjestelmää."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Tilannevedosta %d ei voi poistaa, koska se on tällä hetkellä liitettynä "
-"oleva tilannevedos."
+msgstr "Tilannevedosta %d ei voi poistaa, koska se on tällä hetkellä liitettynä oleva tilannevedos."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Tilannevedosta %d ei voi poistaa, koska se on seuraavaksi liitettävä "
-"tilannevedos."
+msgstr "Tilannevedosta %d ei voi poistaa, koska se on seuraavaksi liitettävä tilannevedos."
 
 msgid "Cleanup"
 msgstr "Puhdistus"
@@ -546,6 +545,12 @@ msgstr "Ei käyttöoikeuksia."
 msgid "Opening file '%s' failed."
 msgstr "Tiedoston \"%s\" avaaminen epäonnistui."
 
+msgid "Option --from only supported for snapshots of type single."
+msgstr ""
+
+msgid "Option --read-write only supported for snapshots of type single."
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -681,9 +686,7 @@ msgid "root argument can be used only together with no-dbus."
 msgstr "Juuriparametria voi käyttää vain no-dbus-asetuksen kanssa."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"käyttö: snapper [--yleisvalitsimet] <komento> [--komennon-valitsimet] "
-"[komennon-parametrit]"
+msgstr "käyttö: snapper [--yleisvalitsimet] <komento> [--komennon-valitsimet] [komennon-parametrit]"
 
 #, fuzzy
 #~ msgid "Quota failure (%s)."
