--- a/po/hu.po
+++ b/po/hu.po
@@ -4,11 +4,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-29 14:27+0100\n"
+"POT-Creation-Date: 2019-10-15 11:05+0200\n"
 "PO-Revision-Date: 2019-03-01 20:28+0000\n"
 "Last-Translator: Robert Taisz <robert.taisz@emerald.hu>\n"
-"Language-Team: Hungarian <https://l10n.opensuse.org/projects/snapper/master/"
-"hu/>\n"
+"Language-Team: Hungarian <https://l10n.opensuse.org/projects/snapper/master/hu/>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,9 +26,7 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algoritmus>\tKarbantartási algoritmus a pillanatfelvételekhez."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-"\t--command <parancs>\t\tFuttassa a parancsot, és készítsen pillanatképet "
-"előtte, majd utána."
+msgstr "\t--command <parancs>\t\tFuttassa a parancsot, és készítsen pillanatképet előtte, majd utána."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr "\t--config, -c <név>\t\tFelhasznált beállítás nevének megadása."
@@ -45,11 +42,13 @@ msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <parancs>\t\tA fájlok összehasonlítására használt parancs."
 
 msgid "\t--disable-used-space\t\tDisable showing used space."
-msgstr ""
-"\t--disable-used-space\t\tFelhasznált terület megjelenítésének letiltása."
+msgstr "\t--disable-used-space\t\tFelhasznált terület megjelenítésének letiltása."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <beállítások>\tA diff parancsnak átadott további beállítások."
+
+msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+msgstr ""
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
 msgstr "\t--fstype, -f <fstype>\t\tFájlrendszer típusának beállítása kézzel."
@@ -83,6 +82,12 @@ msgstr "\t--print-number, -p\t\tA másodiknak létrehozott pillanatfelvétel meg
 
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
 msgstr "\t--quiet, -q\t\t\tNormál kimenet elhagyása."
+
+msgid "\t--read-only\t\t\tCreate read-only snapshot."
+msgstr ""
+
+msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr ""
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <elérési út>\t\tMűvelet elvégzése a cél gyökér elérési úton (csak DBus nélkül működik)."
@@ -285,15 +290,11 @@ msgstr "A(z) %d pillanatkép nem törölhető, mivel az aktuális rendszerben va
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"A(z) %d pillanatkép nem törölhető, mivel ez az aktuálisan csatlakoztatott "
-"pillanatkép."
+msgstr "A(z) %d pillanatkép nem törölhető, mivel ez az aktuálisan csatlakoztatott pillanatkép."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"A(z) %d pillanatkép nem törölhető, mivel ez a következő csatlakoztatandó "
-"pillanatkép."
+msgstr "A(z) %d pillanatkép nem törölhető, mivel ez a következő csatlakoztatandó pillanatkép."
 
 msgid "Cleanup"
 msgstr "Tisztítás"
@@ -575,6 +576,12 @@ msgstr "Nincs hozzáférés."
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "A(z) '%s' fájl megnyitása sikertelen."
+
+msgid "Option --from only supported for snapshots of type single."
+msgstr ""
+
+msgid "Option --read-write only supported for snapshots of type single."
+msgstr ""
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
