--- a/po/id.po
+++ b/po/id.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-29 14:27+0100\n"
+"POT-Creation-Date: 2019-10-15 11:05+0200\n"
 "PO-Revision-Date: 2018-11-02 14:47+0000\n"
 "Last-Translator: Kukuh Syafaat <syafaatkukuh@gmail.com>\n"
-"Language-Team: Indonesian "
-"<https://l10n.opensuse.org/projects/snapper/master/id/>\n"
+"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,6 +43,9 @@ msgstr "\t--disable-used-space\t\tNonaktifkan menampilkan ruang yang digunakan."
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <options>\tPilihan ekstra diteruskan untuk perintah diff."
 
+msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+msgstr ""
+
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
 msgstr "\t--fstype, -f <fstype>\t\tSecara manual mengatur jenis sistem berkas."
 
@@ -73,6 +75,12 @@ msgstr "\t--print-number, -p\t\tMencetak jumlah dari snapshot kedua yang dibuat.
 
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
 msgstr "\t--quiet, -q\t\t\tMenekan keluaran normal."
+
+msgid "\t--read-only\t\t\tCreate read-only snapshot."
+msgstr ""
+
+msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr ""
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <path>\t\tBeroperasi pada target root (hanya bekerja tanpa DBus)."
@@ -262,15 +270,11 @@ msgstr "Tidak dapat menghapus snapshot %d karena ini adalah sistem saat ini."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Tidak dapat menghapus snapshot %d karena ini adalah snapshot yang saat ini "
-"terpasang."
+msgstr "Tidak dapat menghapus snapshot %d karena ini adalah snapshot yang saat ini terpasang."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Tidak dapat menghapus snapshot %d karena ini adalah snapshot yang dipasang "
-"selanjutnya."
+msgstr "Tidak dapat menghapus snapshot %d karena ini adalah snapshot yang dipasang selanjutnya."
 
 msgid "Cleanup"
 msgstr "Pembersihan"
@@ -532,6 +536,12 @@ msgstr "Tidak ada izin."
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "Membuka berkas '%s' gagal."
+
+msgid "Option --from only supported for snapshots of type single."
+msgstr ""
+
+msgid "Option --read-write only supported for snapshots of type single."
+msgstr ""
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
