--- a/po/sv.po
+++ b/po/sv.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-29 14:27+0100\n"
+"POT-Creation-Date: 2019-10-15 11:05+0200\n"
 "PO-Revision-Date: 2019-03-01 20:28+0000\n"
 "Last-Translator: Sven Åhr <anders.ahr@gmail.com>\n"
-"Language-Team: Swedish <https://l10n.opensuse.org/projects/snapper/master/sv/"
-">\n"
+"Language-Team: Swedish <https://l10n.opensuse.org/projects/snapper/master/sv/>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,9 +32,7 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tUpprensningsalgoritm för ögonblicksb
 
 # SLE12
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-"\t--command <kommando>\t\tKör kommandot och skapa före- och efter-"
-"ögonblicksbilder."
+msgstr "\t--command <kommando>\t\tKör kommandot och skapa före- och efter-ögonblicksbilder."
 
 # SLE12
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -57,6 +54,9 @@ msgstr "\t--disable-used-space\t\tInaktivera visning av använt utrymme."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <options>\tExtra alternativ skickades till diffkommandot."
+
+msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+msgstr ""
 
 # SLE12
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
@@ -96,6 +96,12 @@ msgstr "\t--print-number, -p\t\tSkriv ut nummer för den andra skapade ögonblic
 # SLE12
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
 msgstr "\t--quiet, -q\t\t\tUtelämna normal utmatning."
+
+msgid "\t--read-only\t\t\tCreate read-only snapshot."
+msgstr ""
+
+msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr ""
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <path>\t\tArbeta i målroten (fungerar enbart utan DBus)."
@@ -336,8 +342,7 @@ msgstr "B"
 # SLE12
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Det går inte att ta bort ögonblicksbilden %d eftersom den används i systemet."
+msgstr "Det går inte att ta bort ögonblicksbilden %d eftersom den används i systemet."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
@@ -345,9 +350,7 @@ msgstr "Det går inte att radera ögonblicksbilden %d eftersom den är monterad.
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Det går inte att radera ögonblicksbilden %d eftersom den står på tur att "
-"monteras."
+msgstr "Det går inte att radera ögonblicksbilden %d eftersom den står på tur att monteras."
 
 # SLE12
 msgid "Cleanup"
@@ -674,6 +677,12 @@ msgstr "Ingen behörighet."
 #, c-format
 msgid "Opening file '%s' failed."
 msgstr "Det gick inte att öppna filen %s."
+
+msgid "Option --from only supported for snapshots of type single."
+msgstr ""
+
+msgid "Option --read-write only supported for snapshots of type single."
+msgstr ""
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
