--- a/po/be.po
+++ b/po/be.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-15 11:05+0200\n"
+"POT-Creation-Date: 2020-06-18 11:59+0200\n"
 "PO-Revision-Date: 2006-01-04 08:58+0100\n"
 "Last-Translator: Alexander Nyakhaychyk <nyakhaychyk@gmail.com>\n"
 "Language-Team: Belarusian <i18n@suse.de>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
@@ -31,6 +31,9 @@ msgstr ""
 msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr ""
 
+msgid "\t--csvout\t\t\tSet CSV output format."
+msgstr ""
+
 msgid "\t--description, -d <description>\tDescription for snapshot."
 msgstr ""
 
@@ -38,9 +41,6 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
-msgstr ""
-
-msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -59,6 +59,12 @@ msgid "\t--input, -i <file>\t\tRead files to diff from file."
 msgstr ""
 
 msgid "\t--iso\t\t\t\tDisplay dates and times in ISO format."
+msgstr ""
+
+msgid "\t--jsonout\t\t\tSet JSON output format."
+msgstr ""
+
+msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
 msgstr ""
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
@@ -88,6 +94,9 @@ msgstr ""
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr ""
 
+msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
+msgstr ""
+
 msgid "\t--sync, -s\t\t\tSync after deletion."
 msgstr ""
 
@@ -98,9 +107,6 @@ msgid "\t--template, -t <name>\t\tName of config template to use."
 msgstr ""
 
 msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr ""
-
-msgid "\t--type, -t <type>\t\tType of snapshots to list."
 msgstr ""
 
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
@@ -134,15 +140,6 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
-msgstr ""
-
-msgid "\tsnapper get-config"
-msgstr ""
-
-msgid "\tsnapper list"
-msgstr ""
-
-msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -190,9 +187,6 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
-msgid "    Options for 'list' command:"
-msgstr ""
-
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -226,15 +220,6 @@ msgstr ""
 msgid "  Delete snapshot:"
 msgstr ""
 
-msgid "  Get config:"
-msgstr ""
-
-msgid "  List configs:"
-msgstr ""
-
-msgid "  List snapshots:"
-msgstr ""
-
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -256,9 +241,6 @@ msgstr ""
 msgid "  Undo changes:"
 msgstr ""
 
-msgid "#"
-msgstr ""
-
 #, fuzzy, c-format
 msgid "(Snapshot %d.)"
 msgstr "'%1' памылковая сеткавая маска."
@@ -266,6 +248,13 @@ msgstr "'%1' памылковая сеткавая маска."
 #, fuzzy
 msgid "ACL error."
 msgstr "Памылка"
+
+msgid "Active snapshot is already default snapshot."
+msgstr ""
+
+#, c-format
+msgid "Ambit is %s."
+msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
 msgid "B"
@@ -281,9 +270,6 @@ msgstr ""
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-
-msgid "Cleanup"
 msgstr ""
 
 msgid "Command 'cleanup' needs one arguments."
@@ -307,16 +293,7 @@ msgstr ""
 msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
-msgid "Command 'get-config' does not take arguments."
-msgstr ""
-
 msgid "Command 'help' does not take arguments."
-msgstr ""
-
-msgid "Command 'list' does not take arguments."
-msgstr ""
-
-msgid "Command 'list-configs' does not take arguments."
 msgstr ""
 
 msgid "Command 'modify' needs at least one argument."
@@ -351,9 +328,6 @@ msgid "Command 'undochange' needs at least one argument."
 msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
-msgstr ""
-
-msgid "Config"
 msgstr ""
 
 #, fuzzy, c-format
@@ -400,9 +374,6 @@ msgstr ""
 msgid "Creating snapshot failed."
 msgstr ""
 
-msgid "Date"
-msgstr ""
-
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr ""
@@ -416,9 +387,6 @@ msgid_plural "Deleting snapshots from %s:"
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
-
-msgid "Description"
-msgstr ""
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -480,6 +448,10 @@ msgstr "Падрыхтоўка дыскаў..."
 msgid "Illegal snapshot."
 msgstr "Падрыхтоўка дыскаў..."
 
+#, fuzzy, c-format
+msgid "Invalid ambit %s."
+msgstr "Падрыхтоўка дыскаў..."
+
 #, fuzzy
 msgid "Invalid configdata."
 msgstr "Падрыхтоўка дыскаў..."
@@ -487,6 +459,10 @@ msgstr "Падрыхтоўка дыскаў..."
 #, fuzzy
 msgid "Invalid group."
 msgstr "Падрыхтоўка дыскаў..."
+
+#, c-format
+msgid "Invalid machine readable format %s."
+msgstr ""
 
 #, c-format
 msgid "Invalid snapshot '%s'."
@@ -499,9 +475,9 @@ msgstr "Падрыхтоўка дыскаў..."
 msgid "Invalid subvolume."
 msgstr ""
 
-#, c-format
-msgid "Invalid table style %d."
-msgstr ""
+#, fuzzy, c-format
+msgid "Invalid table style %s."
+msgstr "Падрыхтоўка дыскаў..."
 
 #, fuzzy
 msgid "Invalid user."
@@ -510,9 +486,6 @@ msgstr "Падрыхтоўка дыскаў..."
 #, fuzzy
 msgid "Invalid userdata."
 msgstr "Падрыхтоўка дыскаў..."
-
-msgid "Key"
-msgstr ""
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -566,18 +539,6 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
-msgid "Post #"
-msgstr ""
-
-msgid "Post Date"
-msgstr ""
-
-msgid "Pre #"
-msgstr ""
-
-msgid "Pre Date"
-msgstr ""
-
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Памылка"
@@ -597,9 +558,6 @@ msgstr "'%1' памылковая сеткавая маска."
 msgid "Snapshot is in use."
 msgstr "'%1' памылковая сеткавая маска."
 
-msgid "Subvolume"
-msgstr ""
-
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr ""
 
@@ -609,9 +567,6 @@ msgstr ""
 
 msgid "Try 'snapper --help' for more information."
 msgstr ""
-
-msgid "Type"
-msgstr "Тып"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -636,20 +591,12 @@ msgstr "Невядомая опцыя для каманды '%1': %2"
 msgid "Unknown type of snapshot."
 msgstr ""
 
-msgid "Unknown type of snapshots."
+#, c-format
+msgid "Use %s, %s or %s."
 msgstr ""
 
 #, c-format
 msgid "Use an integer number from %d to %d."
-msgstr ""
-
-msgid "Used Space"
-msgstr ""
-
-msgid "User"
-msgstr ""
-
-msgid "Userdata"
 msgstr ""
 
 #, c-format
@@ -658,9 +605,6 @@ msgstr ""
 
 #, c-format
 msgid "Userdata '%s' has empty key."
-msgstr ""
-
-msgid "Value"
 msgstr ""
 
 #, c-format
@@ -694,11 +638,16 @@ msgstr ""
 msgid "nothing to do"
 msgstr ""
 
-msgid "root argument can be used only together with no-dbus."
+msgid ""
+"root argument can be used only together with no-dbus.\n"
+"Try 'snapper --help' for more information."
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
+
+#~ msgid "Type"
+#~ msgstr "Тып"
 
 #, fuzzy
 #~ msgid "Unknown file."
