--- a/po/ka.po
+++ b/po/ka.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-15 11:05+0200\n"
+"POT-Creation-Date: 2020-06-18 11:59+0200\n"
 "PO-Revision-Date: 2005-05-18 10:33+0200\n"
 "Last-Translator: Aiet Kolkhi <aiet@qartuli.net>\n"
 "Language-Team: Georgian <i18n@suse.de>\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
@@ -27,6 +27,9 @@ msgstr ""
 msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr ""
 
+msgid "\t--csvout\t\t\tSet CSV output format."
+msgstr ""
+
 msgid "\t--description, -d <description>\tDescription for snapshot."
 msgstr ""
 
@@ -34,9 +37,6 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
-msgstr ""
-
-msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -55,6 +55,12 @@ msgid "\t--input, -i <file>\t\tRead files to diff from file."
 msgstr ""
 
 msgid "\t--iso\t\t\t\tDisplay dates and times in ISO format."
+msgstr ""
+
+msgid "\t--jsonout\t\t\tSet JSON output format."
+msgstr ""
+
+msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
 msgstr ""
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
@@ -84,6 +90,9 @@ msgstr ""
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr ""
 
+msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
+msgstr ""
+
 msgid "\t--sync, -s\t\t\tSync after deletion."
 msgstr ""
 
@@ -94,9 +103,6 @@ msgid "\t--template, -t <name>\t\tName of config template to use."
 msgstr ""
 
 msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr ""
-
-msgid "\t--type, -t <type>\t\tType of snapshots to list."
 msgstr ""
 
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
@@ -130,15 +136,6 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
-msgstr ""
-
-msgid "\tsnapper get-config"
-msgstr ""
-
-msgid "\tsnapper list"
-msgstr ""
-
-msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -183,9 +180,6 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
-msgid "    Options for 'list' command:"
-msgstr ""
-
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -219,15 +213,6 @@ msgstr ""
 msgid "  Delete snapshot:"
 msgstr ""
 
-msgid "  Get config:"
-msgstr ""
-
-msgid "  List configs:"
-msgstr ""
-
-msgid "  List snapshots:"
-msgstr ""
-
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -249,14 +234,18 @@ msgstr ""
 msgid "  Undo changes:"
 msgstr ""
 
-msgid "#"
-msgstr ""
-
 #, c-format
 msgid "(Snapshot %d.)"
 msgstr ""
 
 msgid "ACL error."
+msgstr ""
+
+msgid "Active snapshot is already default snapshot."
+msgstr ""
+
+#, c-format
+msgid "Ambit is %s."
 msgstr ""
 
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
@@ -273,9 +262,6 @@ msgstr ""
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-
-msgid "Cleanup"
 msgstr ""
 
 msgid "Command 'cleanup' needs one arguments."
@@ -299,16 +285,7 @@ msgstr ""
 msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
-msgid "Command 'get-config' does not take arguments."
-msgstr ""
-
 msgid "Command 'help' does not take arguments."
-msgstr ""
-
-msgid "Command 'list' does not take arguments."
-msgstr ""
-
-msgid "Command 'list-configs' does not take arguments."
 msgstr ""
 
 msgid "Command 'modify' needs at least one argument."
@@ -343,9 +320,6 @@ msgid "Command 'undochange' needs at least one argument."
 msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
-msgstr ""
-
-msgid "Config"
 msgstr ""
 
 #, c-format
@@ -391,9 +365,6 @@ msgstr ""
 msgid "Creating snapshot failed."
 msgstr "DBI Execution failed: %s."
 
-msgid "Date"
-msgstr ""
-
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "DBI Execution failed: %s."
@@ -406,9 +377,6 @@ msgstr "DBI Execution failed: %s."
 msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "DBI Execution failed: %s."
-
-msgid "Description"
-msgstr ""
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -471,10 +439,18 @@ msgstr ""
 msgid "Illegal snapshot."
 msgstr "DBI Execution failed: %s."
 
+#, c-format
+msgid "Invalid ambit %s."
+msgstr ""
+
 msgid "Invalid configdata."
 msgstr ""
 
 msgid "Invalid group."
+msgstr ""
+
+#, c-format
+msgid "Invalid machine readable format %s."
 msgstr ""
 
 #, c-format
@@ -488,16 +464,13 @@ msgid "Invalid subvolume."
 msgstr ""
 
 #, c-format
-msgid "Invalid table style %d."
+msgid "Invalid table style %s."
 msgstr ""
 
 msgid "Invalid user."
 msgstr ""
 
 msgid "Invalid userdata."
-msgstr ""
-
-msgid "Key"
 msgstr ""
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
@@ -552,18 +525,6 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
-msgid "Post #"
-msgstr ""
-
-msgid "Post Date"
-msgstr ""
-
-msgid "Pre #"
-msgstr ""
-
-msgid "Pre Date"
-msgstr ""
-
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -583,9 +544,6 @@ msgstr ""
 msgid "Snapshot is in use."
 msgstr ""
 
-msgid "Subvolume"
-msgstr ""
-
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr ""
 
@@ -594,9 +552,6 @@ msgid "TiB"
 msgstr ""
 
 msgid "Try 'snapper --help' for more information."
-msgstr ""
-
-msgid "Type"
 msgstr ""
 
 #, c-format
@@ -622,20 +577,12 @@ msgstr ""
 msgid "Unknown type of snapshot."
 msgstr ""
 
-msgid "Unknown type of snapshots."
+#, c-format
+msgid "Use %s, %s or %s."
 msgstr ""
 
 #, c-format
 msgid "Use an integer number from %d to %d."
-msgstr ""
-
-msgid "Used Space"
-msgstr ""
-
-msgid "User"
-msgstr ""
-
-msgid "Userdata"
 msgstr ""
 
 #, c-format
@@ -644,9 +591,6 @@ msgstr ""
 
 #, c-format
 msgid "Userdata '%s' has empty key."
-msgstr ""
-
-msgid "Value"
 msgstr ""
 
 #, c-format
@@ -680,7 +624,9 @@ msgstr ""
 msgid "nothing to do"
 msgstr ""
 
-msgid "root argument can be used only together with no-dbus."
+msgid ""
+"root argument can be used only together with no-dbus.\n"
+"Try 'snapper --help' for more information."
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
